--- a/login-server-master/templates/index.html
+++ b/login-server-master/templates/index.html
@@ -8,7 +8,6 @@
     <link rel="stylesheet" href="index.css">
 
 </head>
-
 <body>
     <div id="page">
         <marquee>
@@ -19,15 +18,26 @@
         </main>
         <div id="controls">
             <label for="search">Search:</label>
+            
             <input type="search" id="search" name="search" enterkeyhint="search" value="*">
             <button type="button" id="searchBtn">Search!</button>
-            <button type="button" id="allBtn">Show all</button>
+            <button type="button" id="allBtn">Show inbox</button>
             <label for="sender">From:</label>
-            <input type="text" id="sender" name="sender" value="Alice">
-            <button type="button" id="sendBtn">Send</button>
+            <input type="text" id="sender" name="sender" value={% if current_user.is_authenticated %}
+            {{ current_user.id }}
+          {% endif %} readonly>
             <span></span>
+            <span></span>
+            <label for="sender">To:</label>
+            <input type="text" id="receiver" name="receiver" value="">
+            <button type="button" id="sendBtn">Send </button>
+            <button class="nav-item">
+                <a class="nav-link" href="{{url_for('logout')}}">Logout</a>
+            </button>
+            <!--<button type="button" id="logoutBtn">Logout </button>-->
             <label for="message">Message:</label>
             <textarea id="message" style="grid-row: span 4;">A message...</textarea>
+            <input type="hidden" id="csrf_token" name="csrf_token" value="{{ csrf_token() }}"/>
         </div>
         <div id="anchor"></div>
     </div>
