--- a/login-server-master/templates/createUser.html
+++ b/login-server-master/templates/createUser.html
@@ -22,3 +22,4 @@
     </div>
     <input type="hidden" name="csrf_token" value="{{ csrf_token() }}">
   </form>
+  <link rel="stylesheet" href="index.css">
