--- a/login-server-master/templates/login.html
+++ b/login-server-master/templates/login.html
@@ -8,6 +8,8 @@
 </head>
 
 <body>
+    <h1>Welcome</h1>
+    <p>Please enter username and password below to access messaging application!</p>
     <div id="page">
     <form action="" method=post>
   <dl>
