--- a/login-server-master/templates/index.html
+++ b/login-server-master/templates/index.html
@@ -8,9 +8,42 @@
 
 </head>
 <body>
+    <div class="snowflakes" aria-hidden="true">
+        <div class="snowflake">
+            ❅
+            </div>
+            <div class="snowflake">
+            ❅
+            </div>
+            <div class="snowflake">
+            ❆
+            </div>
+            <div class="snowflake">
+            ❄
+            </div>
+            <div class="snowflake">
+            ❅
+            </div>
+            <div class="snowflake">
+            ❆
+            </div>
+            <div class="snowflake">
+            ❄
+            </div>
+            <div class="snowflake">
+            ❅
+            </div>
+            <div class="snowflake">
+            ❆
+            </div>
+            <div class="snowflake">
+            ❄
+            </div>
+          </div>
     <div id="page">
         <marquee>
             <div id="header"></div>
+            <h1>Welcome {{current_user.id}}! </h1>
         </marquee>
         <main>
             <pre id="output"></pre>
@@ -26,11 +59,7 @@
             <label for="sender">To:</label>
             <input type="text" id="receiver" name="receiver" value="">
             <button type="button" id="allBtn">Show inbox</button>
-            <!--<button class="nav-item">
-                <a class="nav-link" href="{{url_for('logout')}}">Logout</a>
-            </button>-->
             <span></span>
-            <!--<button type="button" id="logoutBtn">Logout </button>-->
             <label for="message">Message:</label>
             <textarea id="message" style="grid-row: span 4;">A message...</textarea>
             <input type="hidden" id="csrf_token" name="csrf_token" value="{{ csrf_token() }}"/>
