--- a/login-server-master/templates/createUser.html
+++ b/login-server-master/templates/createUser.html
@@ -1,12 +1,12 @@
 <form method="post">
   {{ form.csrf_token }}
     <div class="container">
-      <h1>Register</h1>
-      <p>Please fill in this form to create an account.</p>
-      <p>Password must be at least 12 characters.</p>
+      <h1>Create account</h1>
+      <p>Please fill in this simple form to create an account.</p>
+      <p>Remember that your password must be at least 12 characters!</p>
       <hr>
       <label for="username"><b>Username</b></label>
-      <input type="text" placeholder="Enter Email" name="username" id="username" required>
+      <input type="text" placeholder="Enter Username" name="username" id="username" required>
   
       <label for="psw"><b>Password</b></label>
       <input type="password" placeholder="Enter Password" name="psw" id="psw" required>
